added full structure to the tree. Starting with the cart and wishlist

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -5,6 +5,12 @@
   align-items: center;
 }
 
+// flex column
+@mixin flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 // borderHover
 @mixin borderHover {
   padding: 5px 10px;
