--- a/codigos.scss
+++ b/codigos.scss
@@ -1,3 +1,7 @@
+/* ****************************************************/
+/* =================== _HOME.SCSS =================== */
+/* ****************************************************/
+
 .Home {
   width: 100%;
   margin: 0 auto;
@@ -7,10 +11,6 @@
   a {
     text-decoration: none;
     color: inherit;
-  }
-
-  .LinkProductCard {
-    z-index: 5;
   }
 
   .ProductCard {
@@ -29,13 +29,13 @@
       transform: translateY(-2px);
       box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.35);
       border-color: transparent;
+
     }
 
     .wish {
       width: fit-content;
       align-self: flex-end;
       position: absolute;
-      z-index: 99999;
     }
 
     .img-container {
@@ -77,3 +77,7 @@
     }
   }
 }
+
+/* ****************************************************/
+/* =================== _HOME.SCSS =================== */
+/* ****************************************************/
