gh-pages deploy

--- a/src/scss/body/__body-dir.scss
+++ b/src/scss/body/__body-dir.scss
@@ -1,4 +1,5 @@
 @import './home';
 @import './productPage';
 @import './categoryPage';
-@import './searchedPage'
+@import './searchedPage';
+@import './productCard';
