--- a/src/scss/body/_home.scss
+++ b/src/scss/body/_home.scss
@@ -42,6 +42,7 @@
       width: 100%;
       height: 60%;
       padding: 10px 5px;
+      margin-bottom: 5px;
       @include center;
       
       img {
@@ -52,6 +53,10 @@
 
     .info-container {
       padding: 5px 0;
+
+      h3 {
+        font-size: 120%;
+      }
 
       .rating {
         padding: 5px 0;
