--- a/src/scss/body/_categoryPage.scss
+++ b/src/scss/body/_categoryPage.scss
@@ -12,9 +12,8 @@
   }
 
   .ProductCard {
-    margin: 10px 0;
-    padding: 40px 20px;
-    display: flex;
+    margin: 20px 0;
+    padding: 30px 20px;
     position: relative;
     border: 1px solid grey;
     border-radius: 8px;
@@ -32,5 +31,51 @@
       top: 10px;
       right: 10px;
     }
+
+    .LinkProductCard {
+      display: flex;
+      
+      .img-container {
+        margin-right: 10px;
+      }
+
+      .rating {
+        padding: 5px 0;
+        display: flex;
+        align-items: center;
+        
+        .rating-star {
+          padding: 0;
+        }
+
+        span {
+          margin-left: 5px;
+          padding-bottom: 1px;
+          font-size: 80%;
+          font-style: italic;
+        }
+      }
+
+      .price {
+        font-weight: bold;
+
+        span {
+          margin-left: 1px;
+          font-size: 120%;
+        }
+      }
+
+    }
+
+    button {
+      width: fit-content;
+      margin-top: 10px;
+      padding: 5px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 80px;
+      left: 230px;
+    }
+    
   }
 }
