--- a/src/scss/body/_home.scss
+++ b/src/scss/body/_home.scss
@@ -4,15 +4,6 @@
   @include center;
   flex-flow: row wrap;
 
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-
-  .LinkProductCard {
-    z-index: 5;
-  }
-
   .ProductCard {
     width: 300px;
     height: 400px;
@@ -24,6 +15,7 @@
     cursor: pointer;
     transition: all .3s;
     @include flex-column;
+    position: relative;
 
     &:hover {
       transform: translateY(-2px);
@@ -38,46 +30,72 @@
       z-index: 99999;
     }
 
-    .img-container {
-      width: 100%;
-      height: 60%;
-      padding: 10px 5px;
-      margin-bottom: 5px;
-      @include center;
-      
-      img {
-        max-width: 100%;
-        height: auto;
+    .LinkProductCard {
+      z-index: 5;
+      text-decoration: none;
+      color: inherit;
+
+      .img-container {
+        width: 100%;
+        height: 55%;
+        padding: 10px 5px;
+        @include center;
+        
+        // img {
+        //   width: 180px;
+        //   height: auto;
+        // }
+      }
+  
+      .info-container {
+        padding: 10px 0;
+  
+        h3 {
+          font-size: 120%;
+        }
+  
+        .rating {
+          padding: 5px 0;
+          display: flex;
+          align-items: center;
+    
+          .rating-star {
+            margin-right: 5px;
+            padding: 0;
+            
+          }
+        }
+  
+        .price {
+          margin-bottom: 5px;
+          font-weight: bold;
+  
+          span {
+            margin-left: 2px;
+            font-size: 150%;
+          }
+        }
       }
     }
+    
+    button {
+      width: fit-content;
+      margin: 5px auto;
+      padding: 5px 10px;
+      background-color: $first-color;
+      color: white;
+      border: none;
+      outline: none;
+      border-radius: 8px;
+      z-index: 9999;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 5px;
+      cursor: pointer;
 
-    .info-container {
-      padding: 5px 0;
-
-      h3 {
-        font-size: 120%;
-      }
-
-      .rating {
-        padding: 5px 0;
-        display: flex;
-        align-items: center;
-  
-        .rating-star {
-          margin-right: 5px;
-          padding: 0;
-          
-        }
-      }
-
-      .price {
-        margin-bottom: 5px;
-        font-weight: bold;
-
-        span {
-          margin-left: 2px;
-          font-size: 150%;
-        }
+      &:hover {
+        background-color: #ff541f;
       }
     }
   }
