--- a/src/scss/body/_home.scss
+++ b/src/scss/body/_home.scss
@@ -86,6 +86,7 @@
       color: white;
       border: none;
       outline: none;
+      font-weight: bold;
       border-radius: 8px;
       z-index: 9999;
       position: absolute;
@@ -96,6 +97,7 @@
 
       &:hover {
         background-color: #ff541f;
+        box-shadow: 0 3px 3px rgba(0, 0, 0, 0.35);
       }
     }
   }
