--- a/src/scss/body/_searchedPage.scss
+++ b/src/scss/body/_searchedPage.scss
@@ -5,15 +5,11 @@
     font-size: 200%;
   }
 
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-
   .ProductCard {
-    margin: 10px 0;
+    width: 900px;
+    height: 300px;
+    margin: 20px auto;
     padding: 40px 20px;
-    display: flex;
     position: relative;
     border: 1px solid grey;
     border-radius: 8px;
@@ -31,5 +27,83 @@
       top: 10px;
       right: 10px;
     }
+
+    .wrapper {
+      width: 100%;
+      height: 100%;
+      display: flex;
+
+      .img-container {
+        width: 300px;
+        height: 300px;
+        align-self: center;
+        @include center;
+
+        a {
+          width: 300px;
+          height: 300px;
+          text-decoration: none;
+          color: inherit;
+          display: flex;
+          align-items: center;
+        
+          img {
+            width: 250px;
+            height: 250px;
+            object-fit: contain;
+          }
+        }  
+      }  
+
+      .info-container {
+
+        .rating {
+          display: flex;
+          align-items: center;
+
+          .rating-star {
+            padding-left: 0;
+            padding-right: 2px;
+          }
+
+          span {
+            padding-bottom: 2px;
+            font-size: 75%;
+          }
+        }
+
+        .price {
+          font-weight: bold;
+        }
+
+        button {
+          width: fit-content;
+          margin-top: 20px;
+          padding: 5px 10px;
+          background-color: $first-color;
+          color: white;
+          border: none;
+          outline: none;
+          font-weight: bold;
+          border-radius: 8px;
+          z-index: 9999;
+          cursor: pointer;
+    
+          &:hover {
+            background-color: #ff541f;
+            box-shadow: 0 3px 3px rgba(0, 0, 0, 0.35);
+          }
+
+          a {
+            text-decoration: none;
+            color: inherit;
+          }
+        }
+
+        .continueShopping {
+          background-color: transparent;
+        }
+      }
+    } 
   }
 }
